2002/09/10
  dnsbl plugin queues lookups in the background upon connect but
  doesn't block for the results until they are needed, greatly
  speeding up connection times.  Also fix a typo in the dnsbl plugin
  so it'll actually work(!).

  check_badmailfrom and check_badrcptto plugins (Jim Winstead
  <jimw@trainedmonkey.com>)

  Better RFC conformance. (Reset transactions after the DATA command and
  when the MAIL command is being done)


2002/09/08 - v0.10 Released

  New object oriented internals
  
  Very flexible plugin

  All functionality not core to SMTP moved to plugins

  Can accept mails as large as your file system will allow (instead of
  up to as much memory you would allow qpsmtpd to eat).

2002/09/08
  Add klez_filter plugin

  Support more return codes for data_post

  Document data_post

  Add plugin name to the log entries when plugins use log()

  Add plugin_name method to the default plugin object.

  Improve error handling in the spamassassin plugin


2002/08/06
  Spool message bodies to a tmp file so we can support HUGE messages
 
  API to read the message body (undocumented, subject to change)

  data_post hook (undocumented)

  SpamAssassin plugin (connects to spamd on localhost), see
  plugins/spamassassin


2002/07/15
  DNS RBL and RHSBL support via plugins.

  More hooks.

2002/07/03
  First (non functional) version of the new object oriented mail engine (0.10).
 

Changes on the old v0.0x branch:

2002/05/09
  Klez filter (thanks to Robert Spier)

2002/04/20
  Bumped version number to 0.07

  Support comments in configuration files (prefix the line with #)
  
  Support RELAYCLIENT like qmail-smtpd (thanks to Marius Kjeldahl
  <marius@kjeldahl.net> and Zukka Zitting <jukka.zitting@iki.fi>)

  If the connection fails while in DATA we would just accept the
  message. Ouch! Thanks to Devin Carraway <qpsmtpd@devin.com> for the
  patch.


2002/01/26
  Allow [1.2.3.4] for the hostname when checking if the dns resolves


2002/01/21