@@ -1,3 +1,7 @@
+2002/09/12
+  Fix "Could not print" error message in the TcpServer object. (Thanks
+  to Ross Mueller <ross@visual.com>)
+
 2002/09/10
   dnsbl plugin queues lookups in the background upon connect but
   doesn't block for the results until they are needed, greatly
